--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,3 @@
----
----
 
 @article{donat-magnin_interannual_2020,
 	title = {Interannual variability of summer surface mass balance and surface melting in the {Amundsen} sector, {West} {Antarctica}},
@@ -92,7 +90,7 @@ Publisher: American Meteorological Society},
 	month = sep,
 	year = {2022},
 	note = {Publisher: John Wiley \& Sons, Ltd},
-	keywords = {Antarctica, atmospheric rivers, detection, ice sheet mass balance, precipitation, surface mass balance},
+	keywords = {Antarctica, precipitation, atmospheric rivers, detection, ice sheet mass balance, surface mass balance},
 	pages = {e2022GL100585},
 	annote = {https://doi.org/10.1029/2022GL100585},
 }
@@ -317,17 +315,7 @@ Publisher: American Meteorological Society},
 	month = mar,
 	year = {2023},
 	doi = {10.21203/rs.3.rs-2544063/v1},
-	file = {Submitted Version:files/992/Gorodetskaya et al. - 2023 - Compound drivers behind new record high temperatur.pdf:application/pdf},
-}
-
-@article{zou_strong_2022,
-	title = {Strong {Warming} over the {Antarctic} {Peninsula} during {Combined} {Atmospheric} {River} and {Foehn} {Events}: {Contribution} of {Shortwave} {Radiation} and {Turbulence}},
-	url = {https://doi.org/10.1002%2Fessoar.10512808.1},
-	doi = {10.1002/essoar.10512808.1},
-	author = {Zou, Xun and Rowe, Penny Marie and Gorodetskaya, Irina and Bromwich, David H. and Lazzara, Matthew and Cordero, Raul R. and Zhang, Zhenhai and Kawzenuk, Brian and Cordeira, Jason M. and Wille, Jonathan D. and Ralph, F. Martin and Bai, Le-sheng},
-	month = nov,
-	year = {2022},
-	note = {Publisher: Wiley},
+	file = {Submitted Version:/Users/jwille/Zotero/storage/JX7L4CVM/Gorodetskaya et al. - 2023 - Compound drivers behind new record high temperatur.pdf:application/pdf},
 }
 
 @article{pohl_atmospheric_2022,
@@ -348,4 +336,56 @@ Publisher: American Meteorological Society},
 	month = may,
 	year = {2022},
 	note = {Publisher: Wiley},
+}
+
+@inproceedings{hubert_impact_2023,
+	address = {Nagoya, Japan},
+	title = {Impact of the atmospheric river occurring in {March} 2022 on east {Antarctica} on {Cosmic}-{Rays} measurements},
+	url = {https://pos.sissa.it/444/233},
+	doi = {10.22323/1.444.0233},
+	language = {en},
+	urldate = {2023-08-17},
+	booktitle = {Proceedings of 38th {International} {Cosmic} {Ray} {Conference} — {PoS}({ICRC2023})},
+	publisher = {Sissa Medialab},
+	author = {Hubert, Guillaume and Ricaud, Philippe and Favier, Vincent and Wille, Jonathan},
+	month = jul,
+	year = {2023},
+	pages = {233},
+	file = {Full Text:/Users/jwille/Zotero/storage/J3UNWGZE/Hubert et al. - 2023 - Impact of the atmospheric river occurring in March.pdf:application/pdf},
+}
+
+@article{pohl_atmospheric_2023,
+	title = {Atmospheric {Rivers} and {Weather} {Types} in {Aotearoa} {New} {Zealand}: {A} {Two}-{Way} {Story}},
+	volume = {128},
+	issn = {2169-897X},
+	url = {https://doi.org/10.1029/2022JD037209},
+	doi = {10.1029/2022JD037209},
+	abstract = {Abstract Here, we analyze the inter-relationships between weather types (WTs) and atmospheric rivers (ARs) around Aotearoa New Zealand (ANZ), their respective properties, as well as their combined and separate influence on daily precipitation amounts and extremes. Results show that ARs are often associated with 3?4 WTs, but these WTs change depending on the regions where ARs landfall. The WTs most frequently associated with ARs generally correspond to those favoring anomalously strong westerly wind in the mid-latitudes, especially for southern regions of ANZ, or northwesterly anomalies favoring moisture export from the lower latitudes, especially for the northern regions. WTs and ARs show strong within-type and inter-event diversity. The synoptic patterns of the WTs significantly differ when they are associated with AR occurrences, with atmospheric centers of actions being shifted so that moisture fluxes toward ANZ are enhanced. The location, angle, and persistence of ARs appear strongly driven by the synoptic configurations of the WTs. Although total moisture transport shows weaker WT-dependency, it appears strongly related to zonal wind speed to the south of ANZ, or the moisture content of the air mass to the north. Finally, WT influence on daily precipitation may completely change depending on their association, or lack thereof, with AR events. WTs traditionally considered as favorable to wet conditions may conceal daily precipitation extremes occurring during AR days, and anomalously dry days or near-climatological conditions during non-AR days.},
+	number = {15},
+	urldate = {2023-08-17},
+	journal = {Journal of Geophysical Research: Atmospheres},
+	author = {Pohl, Benjamin and Prince, Hamish D. and Wille, Jonathan and Kingston, Daniel G. and Cullen, Nicolas J. and Fauchereau, Nicolas},
+	month = aug,
+	year = {2023},
+	note = {Publisher: John Wiley \& Sons, Ltd},
+	keywords = {Aotearoa New Zealand, atmospheric centers of action, atmospheric rivers, synoptic-scale variability, vapor transport, weather types},
+	pages = {e2022JD037209},
+}
+
+@article{zou_strong_2023,
+	title = {Strong {Warming} {Over} the {Antarctic} {Peninsula} {During} {Combined} {Atmospheric} {River} and {Foehn} {Events}: {Contribution} of {Shortwave} {Radiation} and {Turbulence}},
+	volume = {128},
+	issn = {2169-897X},
+	url = {https://doi.org/10.1029/2022JD038138},
+	doi = {10.1029/2022JD038138},
+	abstract = {Abstract The Antarctica Peninsula (AP) has experienced more frequent and intense surface melting recently, jeopardizing the stability of ice shelves and ultimately leading to ice loss. Among the key phenomena that can initiate surface melting are atmospheric rivers (ARs) and leeside foehn; the combined impact of ARs and foehn led to moderate surface warming over the AP in December 2018 and record-breaking surface melting in February 2022. Focusing on the more intense 2022 case, this study uses high-resolution Polar WRF simulations with advanced model configurations, Reference Elevation Model of Antarctica topography, and observed surface albedo to better understand the relationship between ARs and foehn and their impacts on surface warming. With an intense AR (AR3) intrusion during the 2022 event, weak low-level blocking and heavy orographic precipitation on the upwind side resulted in latent heat release, which led to a more deep-foehn like case. On the leeside, sensible heat flux associated with the foehn magnitude was the major driver during the night and the secondary contributor during the day due to a stationary orographic gravity wave. Downward shortwave radiation was enhanced via cloud clearance and dominated surface melting during the daytime, especially after the peak of the AR/foehn events. However, due to the complex terrain of the AP, ARs can complicate the foehn event by transporting extra moisture to the leeside via gap flows. During the peak of the 2022 foehn warming, cloud formation on the leeside hampered the downward shortwave radiation and slightly increased the downward longwave radiation.},
+	number = {16},
+	urldate = {2023-08-17},
+	journal = {Journal of Geophysical Research: Atmospheres},
+	author = {Zou, Xun and Rowe, Penny M. and Gorodetskaya, Irina and Bromwich, David H. and Lazzara, Matthew A. and Cordero, Raul R. and Zhang, Zhenhai and Kawzenuk, Brian and Cordeira, Jason M. and Wille, Jonathan D. and Ralph, F. Martin and Bai, Le-Sheng},
+	month = aug,
+	year = {2023},
+	note = {Publisher: John Wiley \& Sons, Ltd},
+	keywords = {Antarctic Peninsula, atmospheric river, foehn warming, polar AR scale},
+	pages = {e2022JD038138},
 }
