--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -303,21 +303,6 @@ Publisher: American Meteorological Society},
 	note = {Publisher: Authorea, Inc.},
 }
 
-@techreport{gorodetskaya_compound_2023,
-	type = {preprint},
-	title = {Compound drivers behind new record high temperatures and surface melt at the {Antarctic} {Peninsula} in {February} 2022},
-	url = {https://www.researchsquare.com/article/rs-2544063/v1},
-	abstract = {Abstract
-          The Antarctic Peninsula (AP) experienced a new extreme warm event and record high surface melt in February 2022, rivaling the recent temperature records from 2015 and 2020, and contributing to an alarming series of extreme warm events there. The northern/northwestern AP was directly impacted by an intense atmospheric river (AR) bringing anomalous heat and rainfall, while AR-enhanced foehn effect further warmed its northeastern side. The event was triggered by multiple large-scale atmospheric circulation patterns linking the AR formation to tropical convection anomalies and stationary Rossby waves, with anomalous Amundsen Sea low and record-breaking blocking high. The cascade of impacts culminated in widespread and intensive surface melt across the AP. The event was statistically attributed to global warming. Increasing frequency of such events can undermine the stability of the AP ice shelves, with multiple local to global impacts, including acceleration of the AP ice mass loss and changes in sensitive ecosystems.},
-	urldate = {2023-06-06},
-	institution = {In Review},
-	author = {Gorodetskaya, Irina and Durán-Alarcón, Claudio and Gonzalez-Herrero, Sergi and Clem, Kyle and Imazio, Paola Rodriguez and Santos, Christophe Leroy-Dos and Campos, Diego and Zou, Xun and Dutrievoz, Niels and Rowe, Penny and Wille, Jonathan and Favier, Vincent and Blanchet, Juliette and Chyhareva, Anastasiia and Cordero, Raul and Park, Sang-Jong and Colwell, Steve and Lazzara, Matthew and Carrasco, Jorge and Gulisano, Adriana and Krakovska, Svitlana and Ralph, F. Martin and Pohl, Benjamin},
-	month = mar,
-	year = {2023},
-	doi = {10.21203/rs.3.rs-2544063/v1},
-	file = {Submitted Version:/Users/jwille/Zotero/storage/JX7L4CVM/Gorodetskaya et al. - 2023 - Compound drivers behind new record high temperatur.pdf:application/pdf},
-}
-
 @article{pohl_atmospheric_2022,
 	title = {Atmospheric {Rivers} and {Weather} {Types} in {Aotearoa} {New} {Zealand}: a two-way story},
 	url = {https://doi.org/10.1002%2Fessoar.10511503.1},
@@ -388,4 +373,111 @@ Publisher: American Meteorological Society},
 	note = {Publisher: John Wiley \& Sons, Ltd},
 	keywords = {Antarctic Peninsula, atmospheric river, foehn warming, polar AR scale},
 	pages = {e2022JD038138},
+}
+
+@article{lapere_polar_2024,
+	title = {Polar {Aerosol} {Atmospheric} {Rivers}: {Detection}, {Characteristics}, and {Potential} {Applications}},
+	volume = {129},
+	issn = {2169-897X},
+	url = {https://doi.org/10.1029/2023JD039606},
+	doi = {10.1029/2023JD039606},
+	abstract = {Abstract Aerosols play a key role in polar climate, and are affected by long-range transport from the mid-latitudes, both in the Arctic and Antarctic. This work investigates poleward extreme transport events of aerosols, referred to as polar aerosol atmospheric rivers (p-AAR), leveraging the concept of atmospheric rivers (AR) which signal extreme transport of moisture. Using reanalysis data, we build a detection catalog of p-AARs for black carbon, dust, sea salt and organic carbon aerosols, for the period 1980?2022. First, we describe the detection algorithm, discuss its sensitivity, and evaluate its validity. Then, we present several extreme transport case studies, in the Arctic and in the Antarctic, illustrating the complementarity between ARs and p-AARs. Despite similarities in transport pathways during co-occurring AR/p-AAR events, vertical profiles differ depending on the species, and large-scale transport patterns show that moisture and aerosols do not necessarily originate from the same areas. The complementarity between AR and p-AAR is also evidenced by their long-term characteristics in terms of spatial distribution, seasonality and trends. p-AAR detection, as a complement to AR, can have several important applications for better understanding polar climate and its connections to the mid-latitudes.},
+	number = {2},
+	urldate = {2024-01-14},
+	journal = {Journal of Geophysical Research: Atmospheres},
+	author = {Lapere, Rémy and Thomas, Jennie L. and Favier, Vincent and Angot, Hélène and Asplund, Julia and Ekman, Annica M. L. and Marelle, Louis and Raut, Jean-Christophe and Da Silva, Anderson and Wille, Jonathan D. and Zieger, Paul},
+	month = jan,
+	year = {2024},
+	note = {Publisher: John Wiley \& Sons, Ltd},
+	pages = {e2023JD039606},
+}
+
+@article{gorodetskaya_record-high_2023,
+	title = {Record-high {Antarctic} {Peninsula} temperatures and surface melt in {February} 2022: a compound event with an intense atmospheric river},
+	volume = {6},
+	issn = {2397-3722},
+	url = {https://doi.org/10.1038/s41612-023-00529-6},
+	doi = {10.1038/s41612-023-00529-6},
+	abstract = {The Antarctic Peninsula (AP) experienced a new extreme warm event and record-high surface melt in February 2022, rivaling the recent temperature records from 2015 and 2020, and contributing to the alarming series of extreme warm events over this region showing stronger warming compared to the rest of Antarctica. Here, the drivers and impacts of the event are analyzed in detail using a range of observational and modeling data. The northern/northwestern AP was directly impacted by an intense atmospheric river (AR) attaining category 3 on the AR scale, which brought anomalous heat and rainfall, while the AR-enhanced foehn effect further warmed its northeastern side. The event was triggered by multiple large-scale atmospheric circulation patterns linking the AR formation to tropical convection anomalies and stationary Rossby waves, with an anomalous Amundsen Sea Low and a record-breaking high-pressure system east of the AP. This multivariate and spatial compound event culminated in widespread and intense surface melt across the AP. Circulation analog analysis shows that global warming played a role in the amplification and increased probability of the event. Increasing frequency of such events can undermine the stability of the AP ice shelves, with multiple local to global impacts, including acceleration of the AP ice mass loss and changes in sensitive ecosystems.},
+	number = {1},
+	journal = {npj Climate and Atmospheric Science},
+	author = {Gorodetskaya, Irina V. and Durán-Alarcón, Claudio and González-Herrero, Sergi and Clem, Kyle R. and Zou, Xun and Rowe, Penny and Rodriguez Imazio, Paola and Campos, Diego and Leroy-Dos Santos, Christophe and Dutrievoz, Niels and Wille, Jonathan D. and Chyhareva, Anastasiia and Favier, Vincent and Blanchet, Juliette and Pohl, Benjamin and Cordero, Raul R. and Park, Sang-Jong and Colwell, Steve and Lazzara, Matthew A. and Carrasco, Jorge and Gulisano, Adriana Maria and Krakovska, Svitlana and Ralph, F. Martin and Dethinne, Thomas and Picard, Ghislain},
+	month = dec,
+	year = {2023},
+	pages = {202},
+}
+
+
+@article{wille_extraordinary_2023,
+	title = {The extraordinary {March} 2022 {East} {Antarctica} “heat” wave. {Part} {I}: observations and meteorological drivers},
+	url = {https://journals.ametsoc.org/view/journals/clim/aop/JCLI-D-23-0175.1/JCLI-D-23-0175.1.xml},
+	doi = {https://doi.org/10.1175/JCLI-D-23-0175.1},
+	journal = {Journal of Climate},
+	author = {Wille, Jonathan D. and Alexander, Simon P. and Amory, Charles and Baiman, Rebecca and Barthélemy, Léonard and Bergstrom, Dana M. and Berne, Alexis and Binder, Hanin and Blanchet, Juliette and Bozkurt, Deniz and Bracegirdle, Thomas J. and Casado, Mathieu and Choi, Taejin and Clem, Kyle R. and Codron, Francis and Datta, Rajashree and Battista, Stefano Di and Favier, Vincent and Francis, Diana and Fraser, Alexander D. and Fourré, Elise and Garreaud, René D. and Genthon, Christophe and Gorodetskaya, Irina V. and González-Herrero, Sergi and Heinrich, Victoria J. and Hubert, Guillaume and Joos, Hanna and Kim, Seong-Joong and King, John C. and Kittel, Christoph and Landais, Amaelle and Lazzara, Matthew and Leonard, Gregory H. and Lieser, Jan L. and Maclennan, Michelle and Mikolajczyk, David and Neff, Peter and Ollivier, Inès and Picard, Ghislain and Pohl, Benjamin and Ralph, Martin F. and Rowe, Penny and Schlosser, Elisabeth and Shields, Christine A. and Smith, Inga J. and Sprenger, Michael and Trusel, Luke and Udy, Danielle and Vance, Tessa and Vignon, Étienne and Walker, Catherine and Wever, Nander and Zou, Xun},
+	year = {2023},
+	note = {Place: Boston MA, USA
+Publisher: American Meteorological Society},
+}
+
+@article{wille_extraordinary_2023,
+	title = {The extraordinary {March} 2022 {East} {Antarctica} “heat” wave. {Part} {II}: impacts on the {Antarctic} ice sheet},
+	url = {https://journals.ametsoc.org/view/journals/clim/aop/JCLI-D-23-0176.1/JCLI-D-23-0176.1.xml},
+	doi = {https://doi.org/10.1175/JCLI-D-23-0176.1},
+	journal = {Journal of Climate},
+	author = {Wille, Jonathan D. and Alexander, Simon P. and Amory, Charles and Baiman, Rebecca and Barthélemy, Léonard and Bergstrom, Dana M. and Berne, Alexis and Binder, Hanin and Blanchet, Juliette and Bozkurt, Deniz and Bracegirdle, Thomas J. and Casado, Mathieu and Choi, Taejin and Clem, Kyle R. and Codron, Francis and Datta, Rajashree and Battista, Stefano Di and Favier, Vincent and Francis, Diana and Fraser, Alexander D. and Fourré, Elise and Garreaud, René D. and Genthon, Christophe and Gorodetskaya, Irina V. and González-Herrero, Sergi and Heinrich, Victoria J. and Hubert, Guillaume and Joos, Hanna and Kim, Seong-Joong and King, John C. and Kittel, Christoph and Landais, Amaelle and Lazzara, Matthew and Leonard, Gregory H. and Lieser, Jan L. and Maclennan, Michelle and Mikolajczyk, David and Neff, Peter and Ollivier, Inès and Picard, Ghislain and Pohl, Benjamin and Ralph, Martin F. and Rowe, Penny and Schlosser, Elisabeth and Shields, Christine A. and Smith, Inga J. and Sprenger, Michael and Trusel, Luke and Udy, Danielle and Vance, Tessa and Vignon, Étienne and Walker, Catherine and Wever, Nander and Zou, Xun},
+	year = {2023},
+	note = {Place: Boston MA, USA
+Publisher: American Meteorological Society},
+}
+
+@article{clem_antarctica_2023,
+	title = {Antarctica and the {Southern} {Ocean}},
+	volume = {104},
+	url = {https://journals.ametsoc.org/view/journals/bams/104/9/BAMS-D-23-0077.1.xml},
+	doi = {https://doi.org/10.1175/BAMS-D-23-0077.1},
+	number = {9},
+	journal = {Bulletin of the American Meteorological Society},
+	author = {Clem, Kyle R. and Adusumilli, Susheel and Baiman, Rebecca and Banwell, Alison F. and Barreira, Sandra and Beadling, Rebecca L. and Bozkurt, Deniz and Colwell, Steve and Coy, Lawrence and Datta, Rajashree T. and Laat, Jos De and Plessis, Marcel du and Dunmire, Devon and Fogt, Ryan L. and Freeman, Natalie M. and Fricker, Helen A. and Gardner, Alex S. and Gille, Sarah T. and Johnson, Bryan and Josey, Simon A. and Keller, Linda M. and Kramarova, Natalya A. and Lazzara, Matthew A. and Lieser, Jan L. and MacFerrin, Michael and MacGilchrist, Graeme A. and MacLennan, Michelle L. and Massom, Robert A. and Mazloff, Matthew R. and Mikolajczyk, David E. and Mote, Thomas L. and Nash, Eric R. and Newman, Paul A. and Norton, Taylor and Ochwat, Naomi and Petropavlovskikh, Irina and Pezzi, Luciano P. and Pitts, Michael and Raphael, Marilyn N. and Reid, Phillip and Santee, Michelle L. and Santini, Marcelo and Scambos, Theodore and Schultz, Cristina and Shi, Jia-Rui and Souza, Everaldo and Stammerjohn, Sharon and Strahan, Susan E. and Thompson, Andrew F. and Trusel, Luke D. and Wille, Jonathan D. and Yin, Ziqi and Allen, Jessicca and Camper, Amy V. and Haley, Bridgette O. and Hammer, Gregory and Love-Brotak, S. Elizabeth and Ohlmann, Laura and Noguchi, Lukas and Riddle, Deborah B. and Veasey, Sara W.},
+	year = {2023},
+	note = {Place: Boston MA, USA
+Publisher: American Meteorological Society},
+	pages = {S322 -- S365},
+}
+
+@techreport{wille_examining_2023,
+	type = {preprint},
+	title = {Examining {Atmospheric} {River} {Life} {Cycles} in {East} {Antarctica}},
+	url = {https://essopenarchive.org/users/602812/articles/664291-examining-atmospheric-river-life-cycles-in-east-antarctica?commit=7c7bb9dae21a73d2f0abd2764082518cbee9e2a5},
+	abstract = {During atmospheric river (AR) landfalls on the Antarctic ice sheet, the
+high waviness of the circumpolar polar jet stream allows for
+sub-tropical air masses to be advected towards the Antarctic coastline.
+These rare but high-impact AR events are highly consequential for the
+Antarctic mass balance; yet little is known about the various
+atmospheric dynamical components determining their life cycle. By using
+an AR detection algorithm to retrieve AR landfalls at Dumont d’Urville
+and non-AR analogues based on 700 hPa geopotential height, we examined
+what makes AR landfalls unique and studied the complete life cycle of
+ARs to affect Dumont d’Urville. ARs form in the
+mid-latitudes/sub-tropics in areas of high surface evaporation, likely
+in response to tropical deep convection anomalies. These convection
+anomalies likely lead to Rossby wave trains that help amplify the
+upper-tropospheric flow pattern. As the AR approaches Antarctica,
+condensation of isentropically lifted moisture causes latent heat
+release that – in conjunction with poleward warm air advection –
+induces geopotential height rises and anticyclonic upper-level potential
+vorticity tendencies downstream. As evidenced by a blocking index, these
+tendencies lead to enhanced ridging/blocking that persist beyond the AR
+landfall time, sustaining warm air advection onto the ice sheet.
+Finally, we demonstrate a connection between tropopause polar vortices
+and mid-latitude cyclogenesis in an AR case study. Overall, the non-AR
+analogues reveal that the amplified jet pattern observed during AR
+landfalls is a result of enhanced poleward moisture transport and
+associated diabatic heating which is likely impossible to replicate
+without strong moisture transport.},
+	urldate = {2024-01-05},
+	institution = {Preprints},
+	author = {Wille, Jonathan and Pohl, Benjamin and Favier, Vincent and Winters, Andrew and Baiman, Rebecca and Cavallo, Steven and Santos, Christophe Leroy-Dos and Clem, Kyle R and Udy, Danielle G and Vance, Tessa Rosemary and Gorodetskaya, Irina and Codron, Francis and Berchet, Antoine},
+	month = sep,
+	year = {2023},
+	doi = {10.22541/essoar.169447344.40070941/v1},
 }
