--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -408,28 +408,6 @@ Publisher: American Meteorological Society},
 }
 
 
-@article{wille_extraordinary_2023,
-	title = {The extraordinary {March} 2022 {East} {Antarctica} “heat” wave. {Part} {I}: observations and meteorological drivers},
-	url = {https://journals.ametsoc.org/view/journals/clim/aop/JCLI-D-23-0175.1/JCLI-D-23-0175.1.xml},
-	doi = {https://doi.org/10.1175/JCLI-D-23-0175.1},
-	journal = {Journal of Climate},
-	author = {Wille, Jonathan D. and Alexander, Simon P. and Amory, Charles and Baiman, Rebecca and Barthélemy, Léonard and Bergstrom, Dana M. and Berne, Alexis and Binder, Hanin and Blanchet, Juliette and Bozkurt, Deniz and Bracegirdle, Thomas J. and Casado, Mathieu and Choi, Taejin and Clem, Kyle R. and Codron, Francis and Datta, Rajashree and Battista, Stefano Di and Favier, Vincent and Francis, Diana and Fraser, Alexander D. and Fourré, Elise and Garreaud, René D. and Genthon, Christophe and Gorodetskaya, Irina V. and González-Herrero, Sergi and Heinrich, Victoria J. and Hubert, Guillaume and Joos, Hanna and Kim, Seong-Joong and King, John C. and Kittel, Christoph and Landais, Amaelle and Lazzara, Matthew and Leonard, Gregory H. and Lieser, Jan L. and Maclennan, Michelle and Mikolajczyk, David and Neff, Peter and Ollivier, Inès and Picard, Ghislain and Pohl, Benjamin and Ralph, Martin F. and Rowe, Penny and Schlosser, Elisabeth and Shields, Christine A. and Smith, Inga J. and Sprenger, Michael and Trusel, Luke and Udy, Danielle and Vance, Tessa and Vignon, Étienne and Walker, Catherine and Wever, Nander and Zou, Xun},
-	year = {2023},
-	note = {Place: Boston MA, USA
-Publisher: American Meteorological Society},
-}
-
-@article{wille_extraordinary_2023,
-	title = {The extraordinary {March} 2022 {East} {Antarctica} “heat” wave. {Part} {II}: impacts on the {Antarctic} ice sheet},
-	url = {https://journals.ametsoc.org/view/journals/clim/aop/JCLI-D-23-0176.1/JCLI-D-23-0176.1.xml},
-	doi = {https://doi.org/10.1175/JCLI-D-23-0176.1},
-	journal = {Journal of Climate},
-	author = {Wille, Jonathan D. and Alexander, Simon P. and Amory, Charles and Baiman, Rebecca and Barthélemy, Léonard and Bergstrom, Dana M. and Berne, Alexis and Binder, Hanin and Blanchet, Juliette and Bozkurt, Deniz and Bracegirdle, Thomas J. and Casado, Mathieu and Choi, Taejin and Clem, Kyle R. and Codron, Francis and Datta, Rajashree and Battista, Stefano Di and Favier, Vincent and Francis, Diana and Fraser, Alexander D. and Fourré, Elise and Garreaud, René D. and Genthon, Christophe and Gorodetskaya, Irina V. and González-Herrero, Sergi and Heinrich, Victoria J. and Hubert, Guillaume and Joos, Hanna and Kim, Seong-Joong and King, John C. and Kittel, Christoph and Landais, Amaelle and Lazzara, Matthew and Leonard, Gregory H. and Lieser, Jan L. and Maclennan, Michelle and Mikolajczyk, David and Neff, Peter and Ollivier, Inès and Picard, Ghislain and Pohl, Benjamin and Ralph, Martin F. and Rowe, Penny and Schlosser, Elisabeth and Shields, Christine A. and Smith, Inga J. and Sprenger, Michael and Trusel, Luke and Udy, Danielle and Vance, Tessa and Vignon, Étienne and Walker, Catherine and Wever, Nander and Zou, Xun},
-	year = {2023},
-	note = {Place: Boston MA, USA
-Publisher: American Meteorological Society},
-}
-
 @article{clem_antarctica_2023,
 	title = {Antarctica and the {Southern} {Ocean}},
 	volume = {104},
@@ -444,40 +422,98 @@ Publisher: American Meteorological Society},
 	pages = {S322 -- S365},
 }
 
-@techreport{wille_examining_2023,
-	type = {preprint},
-	title = {Examining {Atmospheric} {River} {Life} {Cycles} in {East} {Antarctica}},
-	url = {https://essopenarchive.org/users/602812/articles/664291-examining-atmospheric-river-life-cycles-in-east-antarctica?commit=7c7bb9dae21a73d2f0abd2764082518cbee9e2a5},
-	abstract = {During atmospheric river (AR) landfalls on the Antarctic ice sheet, the
-high waviness of the circumpolar polar jet stream allows for
-sub-tropical air masses to be advected towards the Antarctic coastline.
-These rare but high-impact AR events are highly consequential for the
-Antarctic mass balance; yet little is known about the various
-atmospheric dynamical components determining their life cycle. By using
-an AR detection algorithm to retrieve AR landfalls at Dumont d’Urville
-and non-AR analogues based on 700 hPa geopotential height, we examined
-what makes AR landfalls unique and studied the complete life cycle of
-ARs to affect Dumont d’Urville. ARs form in the
-mid-latitudes/sub-tropics in areas of high surface evaporation, likely
-in response to tropical deep convection anomalies. These convection
-anomalies likely lead to Rossby wave trains that help amplify the
-upper-tropospheric flow pattern. As the AR approaches Antarctica,
-condensation of isentropically lifted moisture causes latent heat
-release that – in conjunction with poleward warm air advection –
-induces geopotential height rises and anticyclonic upper-level potential
-vorticity tendencies downstream. As evidenced by a blocking index, these
-tendencies lead to enhanced ridging/blocking that persist beyond the AR
-landfall time, sustaining warm air advection onto the ice sheet.
-Finally, we demonstrate a connection between tropopause polar vortices
-and mid-latitude cyclogenesis in an AR case study. Overall, the non-AR
-analogues reveal that the amplified jet pattern observed during AR
-landfalls is a result of enhanced poleward moisture transport and
-associated diabatic heating which is likely impossible to replicate
-without strong moisture transport.},
-	urldate = {2024-01-05},
-	institution = {Preprints},
-	author = {Wille, Jonathan and Pohl, Benjamin and Favier, Vincent and Winters, Andrew and Baiman, Rebecca and Cavallo, Steven and Santos, Christophe Leroy-Dos and Clem, Kyle R and Udy, Danielle G and Vance, Tessa Rosemary and Gorodetskaya, Irina and Codron, Francis and Berchet, Antoine},
-	month = sep,
-	year = {2023},
-	doi = {10.22541/essoar.169447344.40070941/v1},
+@article{baiman_synoptic_2024,
+	title = {Synoptic and planetary-scale dynamics modulate antarctic atmospheric river precipitation intensity},
+	volume = {5},
+	issn = {2662-4435},
+	url = {https://doi.org/10.1038/s43247-024-01307-9},
+	doi = {10.1038/s43247-024-01307-9},
+	abstract = {Although rare, atmospheric rivers substantially influence the interannual variability of Antarctic surface mass balance. Here we use MERRA-2 reanalysis to identify characteristics unique to atmospheric river environments by comparing (1) Analog (environments that feature high-low pressure couplets, similar to Atmospheric River environments, but no Atmospheric River), (2) Atmospheric River, and (3) Top Atmospheric River (highest precipitation) timesteps during 1980–2019 around Antarctica. We find significant differences between Atmospheric River and Analog environments including more intense and poleward-shifted mid-tropospheric geopotential height couplets as well as larger atmospheric moisture anomalies. We find similar significant enhancement in synoptic-scale dynamic drivers of Top Atmospheric Rivers compared to all Atmospheric River environments, but no significant difference in local integrated water vapor anomalies. Instead, our results highlight the importance of large-scale dynamic drivers during Top Atmospheric River timesteps, including amplified Rossby waves excited by tropical convection.},
+	number = {1},
+	journal = {Communications Earth \& Environment},
+	author = {Baiman, Rebecca and Winters, Andrew C. and Pohl, Benjamin and Favier, Vincent and Wille, Jonathan D. and Clem, Kyle R.},
+	month = mar,
+	year = {2024},
+	pages = {127},
 }
+
+@article { WinterTargetedObservingPeriodsduringtheYearofPolarPredictionintheSouthernHemisphereYOPPSH,
+      author = "David H. Bromwich and Irina V. Gorodetskaya and Scott Carpentier and Simon Alexander and Eric Bazile and Victoria J. Heinrich and Francois Massonnet and Jordan G. Powers and Jorge F. Carrasco and Arthur Cayette and Taejin Choi and Anastasia Chyhareva and Steven R. Colwell and Jason M. Cordeira and Raul R. Cordero and Alexis Doerenbecher and Claudio Durán-Alarcón and W. John R. French and Sergi Gonzalez-Herrero and Adrien Guyot and Thomas Haiden and Naohika Hirasawa and Paola Rodriguez Imazio and Brian Kawzenuk and Svitlana Krakovska and Matthew A. Lazzara and Mariana Fontolan Litell and Kevin W. Manning and Kimberley Norris and Sang-Jong Park and F. Martin Ralph and Penny M. Rowe and Qizhen Sun and Vito Vitale and Jonathan D. Wille and Zhenhai Zhang and Xun Zou",
+      title = "Winter Targeted Observing Periods during the Year of Polar Prediction in the Southern Hemisphere (YOPP-SH)",
+      journal = "Bulletin of the American Meteorological Society",
+      year = "2024",
+      publisher = "American Meteorological Society",
+      address = "Boston MA, USA",
+      doi = "10.1175/BAMS-D-22-0249.1",
+      url = "https://journals.ametsoc.org/view/journals/bams/aop/BAMS-D-22-0249.1/BAMS-D-22-0249.1.xml"
+}
+
+
+@article{wille_examining_2024,
+	title = {Examining {Atmospheric} {River} {Life} {Cycles} in {East} {Antarctica}},
+	volume = {129},
+	issn = {2169-897X},
+	url = {https://doi.org/10.1029/2023JD039970},
+	doi = {10.1029/2023JD039970},
+	abstract = {Abstract During atmospheric river (AR) landfalls on the Antarctic ice sheet, the high waviness of the circumpolar polar jet stream allows for subtropical air masses to be advected toward the Antarctic coastline. These rare but high-impact AR events are highly consequential for the Antarctic mass balance; yet little is known about the various atmospheric dynamical components determining their life cycle. By using an AR detection algorithm to retrieve AR landfalls at Dumont d'Urville and non-AR analogs based on 700 hPa geopotential height, we examined what makes AR landfalls unique and studied the complete life cycle of ARs reaching Dumont d'Urville. ARs form in the mid-latitudes/subtropics in areas of high surface evaporation, likely in response to tropical deep convection anomalies. These convection anomalies likely lead to Rossby wave trains that help amplify the upper-tropospheric flow pattern. As the AR approaches Antarctica, condensation of isentropically lifted moisture causes latent heat release that?in conjunction with poleward warm air advection?induces geopotential height rises and anticyclonic upper-level potential vorticity tendencies downstream. As evidenced by a blocking index, these tendencies lead to enhanced ridging/blocking that persist beyond the AR landfall time, sustaining warm air advection onto the ice sheet. Finally, we demonstrate a connection between tropopause polar vortices and mid-latitude cyclogenesis in an AR case study. Overall, the non-AR analogs reveal that the amplified jet pattern observed during AR landfalls is a result of enhanced poleward moisture transport and associated diabatic heating which is likely impossible to replicate without strong moisture transport.},
+	number = {8},
+	urldate = {2024-04-22},
+	journal = {Journal of Geophysical Research: Atmospheres},
+	author = {Wille, Jonathan D. and Pohl, Benjamin and Favier, Vincent and Winters, Andrew C. and Baiman, Rebecca and Cavallo, Steven M. and Leroy-Dos Santos, Christophe and Clem, Kyle and Udy, Danielle G. and Vance, Tessa R. and Gorodetskaya, Irina and Codron, Francis and Berchet, Antoine},
+	month = apr,
+	year = {2024},
+	note = {Publisher: John Wiley \& Sons, Ltd},
+	keywords = {atmospheric blocking, Antarctica, atmospheric rivers, diabatic processes, atmospheric dynamics},
+	pages = {e2023JD039970},
+}
+
+
+@article{wille_extraordinary_2024,
+	title = {The {Extraordinary} {March} 2022 {East} {Antarctica} “{Heat}” {Wave}. {Part} {I}: {Observations} and {Meteorological} {Drivers}},
+	volume = {37},
+	url = {https://journals.ametsoc.org/view/journals/clim/37/3/JCLI-D-23-0175.1.xml},
+	doi = {10.1175/JCLI-D-23-0175.1},
+	number = {3},
+	journal = {Journal of Climate},
+	author = {Wille, Jonathan D. and Alexander, Simon P. and Amory, Charles and Baiman, Rebecca and Barthélemy, Léonard and Bergstrom, Dana M. and Berne, Alexis and Binder, Hanin and Blanchet, Juliette and Bozkurt, Deniz and Bracegirdle, Thomas J. and Casado, Mathieu and Choi, Taejin and Clem, Kyle R. and Codron, Francis and Datta, Rajashree and Battista, Stefano Di and Favier, Vincent and Francis, Diana and Fraser, Alexander D. and Fourré, Elise and Garreaud, René D. and Genthon, Christophe and Gorodetskaya, Irina V. and González-Herrero, Sergi and Heinrich, Victoria J. and Hubert, Guillaume and Joos, Hanna and Kim, Seong-Joong and King, John C. and Kittel, Christoph and Landais, Amaelle and Lazzara, Matthew and Leonard, Gregory H. and Lieser, Jan L. and Maclennan, Michelle and Mikolajczyk, David and Neff, Peter and Ollivier, Inès and Picard, Ghislain and Pohl, Benjamin and Ralph, F. Martin and Rowe, Penny and Schlosser, Elisabeth and Shields, Christine A. and Smith, Inga J. and Sprenger, Michael and Trusel, Luke and Udy, Danielle and Vance, Tessa and Vignon, Étienne and Walker, Catherine and Wever, Nander and Zou, Xun},
+	year = {2024},
+	note = {Place: Boston MA, USA
+Publisher: American Meteorological Society},
+	pages = {757 -- 778},
+}
+
+
+@article{wille_extraordinary_2024,
+	title = {The {Extraordinary} {March} 2022 {East} {Antarctica} “{Heat}” {Wave}. {Part} {II}: {Impacts} on the {Antarctic} {Ice} {Sheet}},
+	volume = {37},
+	url = {https://journals.ametsoc.org/view/journals/clim/37/3/JCLI-D-23-0176.1.xml},
+	doi = {10.1175/JCLI-D-23-0176.1},
+	number = {3},
+	journal = {Journal of Climate},
+	author = {Wille, Jonathan D. and Alexander, Simon P. and Amory, Charles and Baiman, Rebecca and Barthélemy, Léonard and Bergstrom, Dana M. and Berne, Alexis and Binder, Hanin and Blanchet, Juliette and Bozkurt, Deniz and Bracegirdle, Thomas J. and Casado, Mathieu and Choi, Taejin and Clem, Kyle R. and Codron, Francis and Datta, Rajashree and Battista, Stefano Di and Favier, Vincent and Francis, Diana and Fraser, Alexander D. and Fourré, Elise and Garreaud, René D. and Genthon, Christophe and Gorodetskaya, Irina V. and González-Herrero, Sergi and Heinrich, Victoria J. and Hubert, Guillaume and Joos, Hanna and Kim, Seong-Joong and King, John C. and Kittel, Christoph and Landais, Amaelle and Lazzara, Matthew and Leonard, Gregory H. and Lieser, Jan L. and Maclennan, Michelle and Mikolajczyk, David and Neff, Peter and Ollivier, Inès and Picard, Ghislain and Pohl, Benjamin and Ralph, F. Martin and Rowe, Penny and Schlosser, Elisabeth and Shields, Christine A. and Smith, Inga J. and Sprenger, Michael and Trusel, Luke and Udy, Danielle and Vance, Tessa and Vignon, Étienne and Walker, Catherine and Wever, Nander and Zou, Xun},
+	year = {2024},
+	note = {Place: Boston MA, USA
+Publisher: American Meteorological Society},
+	pages = {779 -- 799},
+}
+
+
+@article{wille_examining_2024,
+	title = {Examining {Atmospheric} {River} {Life} {Cycles} in {East} {Antarctica}},
+	volume = {129},
+	issn = {2169-897X},
+	url = {https://doi.org/10.1029/2023JD039970},
+	doi = {10.1029/2023JD039970},
+	abstract = {Abstract During atmospheric river (AR) landfalls on the Antarctic ice sheet, the high waviness of the circumpolar polar jet stream allows for subtropical air masses to be advected toward the Antarctic coastline. These rare but high-impact AR events are highly consequential for the Antarctic mass balance; yet little is known about the various atmospheric dynamical components determining their life cycle. By using an AR detection algorithm to retrieve AR landfalls at Dumont d'Urville and non-AR analogs based on 700 hPa geopotential height, we examined what makes AR landfalls unique and studied the complete life cycle of ARs reaching Dumont d'Urville. ARs form in the mid-latitudes/subtropics in areas of high surface evaporation, likely in response to tropical deep convection anomalies. These convection anomalies likely lead to Rossby wave trains that help amplify the upper-tropospheric flow pattern. As the AR approaches Antarctica, condensation of isentropically lifted moisture causes latent heat release that?in conjunction with poleward warm air advection?induces geopotential height rises and anticyclonic upper-level potential vorticity tendencies downstream. As evidenced by a blocking index, these tendencies lead to enhanced ridging/blocking that persist beyond the AR landfall time, sustaining warm air advection onto the ice sheet. Finally, we demonstrate a connection between tropopause polar vortices and mid-latitude cyclogenesis in an AR case study. Overall, the non-AR analogs reveal that the amplified jet pattern observed during AR landfalls is a result of enhanced poleward moisture transport and associated diabatic heating which is likely impossible to replicate without strong moisture transport.},
+	number = {8},
+	urldate = {2024-04-22},
+	journal = {Journal of Geophysical Research: Atmospheres},
+	author = {Wille, Jonathan D. and Pohl, Benjamin and Favier, Vincent and Winters, Andrew C. and Baiman, Rebecca and Cavallo, Steven M. and Leroy-Dos Santos, Christophe and Clem, Kyle and Udy, Danielle G. and Vance, Tessa R. and Gorodetskaya, Irina and Codron, Francis and Berchet, Antoine},
+	month = apr,
+	year = {2024},
+	note = {Publisher: John Wiley \& Sons, Ltd},
+	keywords = {atmospheric blocking, Antarctica, atmospheric rivers, diabatic processes, atmospheric dynamics},
+	pages = {e2023JD039970},
+}
+
+
